# rust-bench

./: Cargo.toml
benches/: for-each-vs-foor-loop.rs  vec-join-vs-string-push.rs
